# ocr_v2

./: .coverage  .env.example  .gitignore  API_DOCUMENTATION.md  CLIENT_README.md  MIGRATION_GUIDE.md  Makefile  README.md  REMOTE_ACCESS_GUIDE.md  api.py  api_status_check.py  case_management_api.py  create_sample_pdfs.py  demo_client.py  direct_access.sh  final_test.py  final_test_results.json  integration_test.py  integration_test_report.md  pyproject.toml  remote_client.py  requirements.txt  setup_remote_access.py  ssh_tunnel.sh  test_api_local.py  test_results.json  test_samples.py
config/: requirements.txt  requirements_client.txt
data/outputs/1/: 1_analysis.json
data/outputs/1/text/: 1_page1.txt
data/outputs/2/: 2_analysis.json
data/outputs/2/text/: 2_page1.txt  2_page2.txt  2_page3.txt  2_page4.txt  2_page5.txt  2_page6.txt  2_page7.txt  2_page8.txt  2_page9.txt
data/outputs/a/1/: 1_analysis.json
data/outputs/a/3/: 3_analysis.json
data/outputs/a/3/text/: 3_page1.txt  3_page10.txt  3_page11.txt  3_page12.txt  3_page13.txt  3_page14.txt  3_page15.txt  3_page16.txt  3_page17.txt  3_page18.txt  3_page19.txt  3_page2.txt  3_page20.txt  3_page21.txt  3_page22.txt  3_page23.txt  3_page24.txt  3_page25.txt  3_page26.txt  3_page27.txt  3_page28.txt  (+8 more)
data/outputs/b/1/: 1_analysis.json
data/outputs/folder1/1/: 1_analysis.json
data/outputs/folder2/1/: 1_analysis.json
data/outputs/invoices/1/: 1_analysis.json
data/outputs/legal/1/: 1_analysis.json
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml
docs/: README.md
docs/api/: API_DOCUMENTATION.md
docs/examples/: api_examples.json  example_hierarchy_usage.py
docs/guides/: CLIENT_README.md
ocr_env/: pyvenv.cfg
src/api/v1/: api.py  case_management_api.py
tests/: final_test.py  final_test_results.json  integration_test.py  integration_test_report.md  realtime_api_test.py  run_tests_with_separate_output.py  test_all_samples.py  test_config.py  test_hierarchy_enhancement.py  test_samples_hierarchy.py
tests/e2e/: realtime_api_test.py  test_all_samples.py  test_hierarchy_enhancement.py  test_samples_hierarchy.py
tests/integration/: final_test.py  integration_test.py
tests/unit/: test_config.py
tools/client/: ocr_client.py
(+3 files in other folders)
